--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,16 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/gdx-backend-lwjgl-natives.jar"/>
+	<classpathentry kind="lib" path="lib/gdx-freetype-natives.jar"/>
+	<classpathentry kind="lib" path="lib/gdx-freetype.jar" sourcepath="lib/gdx-freetype-sources.jar"/>
+	<classpathentry kind="lib" path="lib/gdx-natives.jar"/>
+	<classpathentry kind="lib" path="lib/gdx.jar" sourcepath="lib/gdx-sources.jar"/>
+	<classpathentry kind="lib" path="lib/mini2Dx-dependency-injection-desktop.jar" sourcepath="lib/mini2Dx-dependency-injection-desktop-source.zip"/>
+	<classpathentry kind="lib" path="lib/mini2Dx-core.jar" sourcepath="lib/mini2Dx-core-source.zip"/>
+	<classpathentry kind="lib" path="lib/mini2Dx-dependency-injection.jar" sourcepath="lib/mini2Dx-dependency-injection-source.zip"/>
+	<classpathentry kind="lib" path="lib/mini2Dx-ecs-source.zip" sourcepath="lib/mini2Dx-ecs-source.zip"/>
+	<classpathentry kind="lib" path="lib/mini2Dx-tiled.jar" sourcepath="lib/mini2Dx-tiled-source.zip"/>
+	<classpathentry kind="lib" path="lib/gdx-backend-lwjgl.jar" sourcepath="lib/gdx-backend-lwjgl-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
