--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/MightyUtils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/GameCore"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/GameCore-LWJGL"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
